[gd_scene load_steps=16 format=3 uid="uid://o6ptoqvbyt34"]

[ext_resource type="Script" path="res://batch_actions.gd" id="1_l0hk3"]
[ext_resource type="Texture2D" uid="uid://buof8b4xcuxbc" path="res://RiddleBottle-Sheet.png" id="2_hd2is"]
[ext_resource type="Texture2D" uid="uid://3radpiy1ay4" path="res://BubblingCask-Sheet.png" id="3_dv0xh"]
[ext_resource type="Texture2D" uid="uid://b5en6ktlaf470" path="res://WineLabel.png" id="4_1qnij"]
[ext_resource type="ButtonGroup" uid="uid://hj7gwkxb20t3" path="res://batch_actions_button_group.tres" id="4_mukwr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kavyq"]
bg_color = Color(0.34902, 0.6, 0.6, 0.294118)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvx0f"]
atlas = ExtResource("2_hd2is")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85hov"]
atlas = ExtResource("2_hd2is")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_puhl7"]
atlas = ExtResource("2_hd2is")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke26n"]
atlas = ExtResource("2_hd2is")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t5g1"]
atlas = ExtResource("3_dv0xh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dy1p"]
atlas = ExtResource("3_dv0xh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fic53"]
atlas = ExtResource("3_dv0xh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg0uc"]
atlas = ExtResource("3_dv0xh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixa6s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvx0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85hov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puhl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke26n")
}],
"loop": true,
"name": &"bottled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t5g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dy1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fic53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg0uc")
}],
"loop": true,
"name": &"cask",
"speed": 5.0
}]

[node name="BatchActions" type="Panel"]
custom_minimum_size = Vector2(250, 37)
anchors_preset = 10
anchor_right = 1.0
offset_right = -390.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kavyq")
script = ExtResource("1_l0hk3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(30, 18)
sprite_frames = SubResource("SpriteFrames_ixa6s")
animation = &"cask"

[node name="LabelSprite" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
texture = ExtResource("4_1qnij")

[node name="Button1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -8.5
offset_right = -1.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
disabled = true
toggle_mode = true
button_group = ExtResource("4_mukwr")
text = "Fermenting...."

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -8.5
offset_right = -7.0
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
toggle_mode = true
button_group = ExtResource("4_mukwr")
text = "Sell"

[node name="QualityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -18.5
offset_right = 18.0
offset_bottom = 18.5
grow_vertical = 2
text = "50"
vertical_alignment = 1

[connection signal="toggled" from="Button1" to="." method="_on_button_1_toggled"]
[connection signal="toggled" from="Button2" to="." method="_on_button_2_toggled"]
